--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ PORT=5000
 NODE_ENV=development
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE=30d
+REACT_APP_API_BASE_URL=https://business-app-9dl4.onrender.com
