--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://diope2diope:3IpTZ6hGwXkEdgm7@cluster0.poyyb0c.mongodb.ne
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=your_jwt_secret_key_here
+REACT_APP_API_BASE_URL=https://business-app-3.onrender.com
